<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="radio_button_glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_start">Click To Download</string>
    <string name="downloading">Downloading...</string>
    <string name="download_complete">Download Complete</string>
    <string name="no_download_selected">Select file to download</string>

    <string name="notification_channel_id" translatable="true">notification_channel</string>
    <string name="notification_channel_name" translatable="false">LoadApp</string>
    <string name="download_status">Download Status:</string>
    <string name="download_title">Download Title:</string>
    <string name="download_title_value">File that was downloaded</string>
    <string name="download_status_value">Download Status Value</string>
    <string name="default_status_text">Unknown Status</string>
    <string name="success_status_text">SUCCESS</string>
    <string name="failure_status_text">FAILURE</string>
    <string name="download_another_file_btn">Download Another File</string>

</resources>
