<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/detail_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/content_detail_scene">

        <TextView
            android:id="@+id/download_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="Download Title: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/download_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:text="@string/download_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_title" />

        <TextView
            android:id="@+id/download_title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/download_title_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/download_title"
            app:layout_constraintStart_toEndOf="@+id/download_title" />

        <TextView
            android:id="@+id/download_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/download_status_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/download_status"
            app:layout_constraintStart_toEndOf="@+id/download_status" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>